# storage/api-docs/api-docs.json
@@ -131,6 +131,59 @@
                 }
             }
         },
+        "/api/maintenance_ratings": {
+            "get": {
+                "tags": [
+                    "MaintenanceRating"
+                ],
+                "summary": "Display a listing of the resource.",
+                "description": "Displays all the Maintenace Rating",
+                "operationId": "65d7bb2a4392808708847a04d3af8a76",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation, Returns a list of Climates in JSON format"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/api/maintenance_ratings/{id}": {
+            "get": {
+                "tags": [
+                    "MaintenanceRating"
+                ],
+                "summary": "Display the specified resource.",
+                "description": "Gets a maintenance rating by ID",
+                "operationId": "d85beaeba240fe32b2f881e7fca78f6a",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Maintenance rating id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/api/plants": {
             "get": {
                 "tags": [
